--- a/Presentation/src/main/res/layout/activity_main.xml
+++ b/Presentation/src/main/res/layout/activity_main.xml
@@ -4,15 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     tools:context=".ui.activities.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <ImageView
+        android:id="@+id/back_splash"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="@dimen/_15ssp"
+        android:layout_marginTop="@dimen/_15ssp"
+        android:background="@drawable/splash_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/_10ssp"
+        android:layout_marginBottom="@dimen/_30ssp"
+        android:elevation="@dimen/_6ssp"
+        android:src="@drawable/app_ic"
+        app:layout_constraintBottom_toBottomOf="@id/back_splash"
+        app:layout_constraintEnd_toEndOf="@id/back_splash"
+        app:layout_constraintStart_toStartOf="@id/back_splash"
+        app:layout_constraintTop_toTopOf="@id/back_splash" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
